--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ before_install:
    - docker build -t  creativeprogrammer2020/docker-react  -f Dockerfile.dev .
 
 script:
-   - docker run  creativeprogrammer2020/docker-react npm run test -- --coverage
+   - docker run  creativeprogrammer2020/docker-react npm run test
